<resources>
    <string name="app_name">Eye Health</string>

    <string name="tab_top">อันดับ</string>
    <string name="tab_stats">เวลาหน้าจอ</string>
    <string name="tab_installed">ติดตั้ง</string>

    <string name="top_menu_share">แชร์</string>
    <string name="top_head">อันดับการใช้งานแอปพลิเคชันรายสัปดาห์</string>
    <string name="top_time">เวลาที่ใช้งาน</string>
    <string name="top_share_header">3 อันดับแรกของแอปพลิเคชั่นที่ใช้งานมากที่สุด:\n</string>

    <string name="menu_select_period">เลือกระยะเวลา</string>
    <string name="menu_select_list">เลือกรายการ</string>
    <string name="menu_search">ค้นหา</string>

    <string name="stats_select_dates">เลือกวันที่เริ่มต้นและวันที่สิ้นสุด</string>
    <string name="stats_day">วันนี้</string>
    <string name="stats_yesterday">เมื่อวาน</string>
    <string name="stats_week">สัปดาห์</string>
    <string name="stats_year">เดือน</string>

    <string name="enable_usage_permission">เปิดใช้สิทธิ์สำหรับ Eye Health แล้วกด back</string>

    <string name="from">จาก</string>
    <string name="to">ถึง</string>

    <string name="hours">h</string>
    <string name="minutes">min</string>
    <string name="seconds">sec</string>

    <string name="installed_menu_search_hint">พิมพ์ชื่อแอป</string>
    <string name="installed_spinner_sort">เรียงตาม</string>
    <string name="installed_include_system">แอปพลิเคชันที่มีอยู่ในระบบ</string>
    <string name="installed_cannot_be_launched">ไม่สามารถเปิดแอ็พพลิเคชันได้</string>

    <string name="choose_action">เลือกการทำงาน</string>
    <string name="launch">เปิด</string>
    <string name="details">รายละเอียด</string>
    <string name="system_menu">เมนูระบบ</string>
    <string name="uninstall">ถอนการติดตั้ง</string>

    <!-- ส่วนของ navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->
    <string name="action_settings">ตั้งค่า</string>
    <string name="action_notifications">แจ้งเตือน</string>

    <string name="item_1">เวลาหน้าจอ</string>
    <string name="item_2">Electronics</string>
    <string name="item_3">Lifestyle</string>
    <string name="item_4">Home Appliances</string>
    <string name="item_5">Books \u0026 More</string>
    <string name="item_6">More</string>

    <string name="my_profile">จัดการข้อมูลส่วนตัว</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>


    <!--บทนำ slider -->
    <string name="title_activity_welcome">หน้าจอหลัก</string>
    <string name="next">ต่อไป</string>
    <string name="skip">ข้าม</string>
    <string name="start">เสร็จสิ้น</string>

    <string name="slide_1_title">ติดตามเวลาหน้าจอ</string>
    <string name="slide_1_desc">ระบบสามารถแสดงผลเวลาการใช้งานแอปพลิเคชั่นให้ผู้ใช้งานทราบได้ด้วยตนเอง
    </string>

    <string name="slide_2_title">จัดอันดับเวลาหน้าจอ</string>
    <string name="slide_2_desc">ระบบสามารถแสดงผลการจัดอันดับเวลาการใช้งานแอปพลิเคชั่นให้ผู้ใช้งานทราบได้ด้วยตนเอง</string>

    <string name="slide_3_title">แนะนำการดูแลสุขภาพตา</string>
    <string name="slide_3_desc">ระบบสามารถแสดงข้อมูลการดูแลสุขภาพตาให้ผู้ใช้งานทราบและปฏิบัติตนให้เหมาะสมกับคำแนะนำนั้นๆ</string>

    <string name="slide_4_title">อาการทางสุขภาพตา</string>
    <string name="slide_4_desc">ระบบสามารถแสดงข้อมูลอาการทางด้านสุขภาพตาที่เกิดขึ้นในระหว่างการเล่นอุปกรณ์มือถือ</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">เข้าสู่ระบบ</string>
    <string name="Password">รหัสผ่าน</string>
    <string name="Email">อีเมล์</string>
    <string name="SinghUp">ลงทะเบียนผู้ใช้งาน</string>
    <string name="Name">ชื่อผู้ใช้งาน</string>
    <string name="Save">บันทึก</string>
    <string name="Cancel">ยกเลิก</string>
    <string name="failed">การทำงานผิดพลาด</string>
    <string name="logout">ลงชื่อออก</string>
    <string name="welcome">Welcome</string>
    <string name="change_password">แก้ไขข้อมูลส่วนตัว</string>


    <!-- new login and register -->
    <string name="app_name1">หน้าสำหรับการเข้าสู่ระบบ</string>
    <string name="app_name2">หน้าสำหรับการลงทะเบียน</string>
    <string name="hint_email">อีเมล์</string>
    <string name="hint_password">รหัสผ่าน</string>
    <string name="hint_name">ชื่อ</string>
    <string name="hint_surname">นามสกุล</string>
    <string name="btn_login">เข้าสู่ระบบ</string>
    <string name="btn_register">ลงทะเบียน</string>
    <string name="btn_link_to_register">หากยังไม่เป็นสมาชิก? ลงทะเบียน.</string>
    <string name="btn_link_to_guest">ข้ามขั้นตอนการลงทะเบียน</string>
    <string name="btn_link_to_login">ลงทะเบียนเสร็จเรียบร้อยแล้ว! เข้าสู่ระบบ.</string>
    <string name="welcome1">ยินดีต้อนรับ</string>
    <string name="btn_logout">ออกจากระบบ</string>
    <string name="name">ชื่อผู้ใช้งาน</string>
    <string name="nav_screen">เวลาหน้าจอ</string>
    <string name="nav_eye">ตรวจสุขภาพตา</string>
    <string name="nav_intro">ความรู้</string>
    <string name="nav_noti">แจ้งเตือน</string>
    <string name="nav_mor">เพิ่มเติม</string>

</resources>
