<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.crud.singl.eyehealth.startup.WelcomeUserActivity">

    <TextView
        android:id="@+id/textVieWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonlogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

    <Button
        android:id="@+id/buttonChangeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password" />
</LinearLayout>
